# Repository

./: CMakeLists.txt  Dockerfile  Makefile  README.md  bitbucket-pipelines.yml  conanfile.txt
scripts/: build.sh
src/: main.cpp
tests/: test_main.cpp
